--- a/Firefox Focus/Variable i gets reset to 0/index.html
+++ b/Firefox Focus/Variable i gets reset to 0/index.html
@@ -15,5 +15,5 @@
 <p>Apparently, in Firefox Focus on Android it happens that if the name of the variable is <i>i</i>, FFF resets it to 0 each time. By renaming it to something else, for example <i>test</i>, its value increases each time.</p>
 </body>
 
-<script src="runtime"></script>
+<script src="runtime.js"></script>
 </html>
