--- a/Firefox Focus/Variable i gets reset to 0/index.html
+++ b/Firefox Focus/Variable i gets reset to 0/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sl">
+<html lang="en">
 <head>
     <meta charset="UTF-8" />
 	<meta name="author" content="Žan Žnidar">
