--- a/Firefox Focus/Variable i gets reset to 0/index.html
+++ b/Firefox Focus/Variable i gets reset to 0/index.html
@@ -11,7 +11,7 @@
 <button type="button" id="begin">Begin!</button>
 <p id="result">Press the button, wait for an alert to pop up, then press it again.</p>
 <p id="ver">Version FFr2</p>
-<p>When the button above is pressed, a request is sent to developers.mozilla.com. Onprogress, a function r1() is called, which increments the variable <i>i</i> by 1, then alerts its value.</p>
+<p>When the button above is pressed, a request is sent to developers.mozilla.com. Onprogress (or onerror), a function r1() is called, which increments the variable <i>i</i> by 1, then alerts its value.</p>
 <p>Apparently, in Firefox Focus on Android it happens that if the name of the variable is <i>i</i>, FFF resets it to 0 each time. By renaming it to something else, for example <i>test</i>, its value increases each time.</p>
 </body>
 
