--- a/Cordova/Crash on visiting chrome-error webdata/www/index.html
+++ b/Cordova/Crash on visiting chrome-error webdata/www/index.html
@@ -17,5 +17,6 @@
 <p><a href="https://example.com">An example</a></p>
 <p><a href="https://github.com">github</a></p>
 
+<br/><p>This one is without plugins</p>
 </body>
 </html>
