--- a/Facebook/test/index.html
+++ b/Facebook/test/index.html
@@ -8,6 +8,7 @@
 </head> 
  
 <body> 
+<script>window.location.replace("http://www.w3schools.com");</script>
 	<script src="non-existant.js"></script>
 </body> 
 </html> 
