Only links in without target cannot be followed

--- a/Firefox Focus/Cannot follow links/index.html
+++ b/Firefox Focus/Cannot follow links/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p onclick="window.open('https://example.com');">This text is clickable and should open example dot com</p>
+    <p onclick="window.open('https://example.com');">This text is clickable and should open example dot com in a new tab (no target specified)</p>
+    <br><br>
+    <p onclick="window.open('https://example.com', '_self');">This text is clickable and should open example dot com in the same tab (_self)</p>
     
 </body>
 </html>
